# ZygorGuidesViewer

./: .gitignore  Bindings.xml  FORMAT.md  Faction.lua  Foglight.lua  Functions.lua  Goal.lua  Log.lua  Makefile  MapSpot.lua  MapSpotSet.lua  Options.lua  Parser.lua  Pointer.lua  Profession.lua  QuestAutoAccept.lua  QuestTracking.lua  README.md  Retrofit.lua  Step.lua  Ver.lua  Waypoints.lua  ZygorGuidesViewer.lua  ZygorGuidesViewerFrame.lua  ZygorGuidesViewerFrame.xml  ZygorGuidesViewerMenuFrame.lua  ZygorGuidesViewerOptions.lua  files.xml  generate_zygor_guides.sh  pyproject.toml
.github/workflows/: format.yml
Data/: Chains.lua
Guides/: Autoload.xml  ZygorGuidesAlliance.lua  ZygorGuidesAlliance.lua.bak  ZygorGuidesHorde.lua  readme.txt
Guides/Dailies/: ZygorDailiesAllianceCLASSICTrial.lua  ZygorDailiesCommonCLASSICTrial.lua  ZygorDailiesHordeCLASSICTrial.lua
Guides/Dungeons/: ZygorDungeonAllianceCLASSIC.lua  ZygorDungeonAllianceCLASSICTrial.lua  ZygorDungeonHordeCLASSIC.lua  ZygorDungeonHordeCLASSICTrial.lua  ZygorDungeonScenariosAlliance_CLASSICTrial.lua  ZygorDungeonScenariosHordeCLASSICTrial.lua  ZygorGearAllianceCLASSICTrial.lua  ZygorGearCommonCLASSICTrial.lua  ZygorGearHordeCLASSICTrial.lua
Guides/Events/: ZygorEventsAllianceCLASSIC.lua  ZygorEventsHordeCLASSIC.lua  (+2 more)
Localization/: Base.lua  NPCs_deDE.lua  NPCs_enUS.lua  NPCs_esES.lua  NPCs_frFR.lua  NPCs_koKR.lua  NPCs_ruRU.lua  NPCs_zhCN.lua  NPCs_zhTW.lua  deDE.lua  enUS.lua  esES.lua  frFR.lua  koKR.lua  ruRU.lua  zhCN.lua  zhTW.lua
Skin/: leavesofsteel_border.tga
src/: guides_structure.csv
(+426 files in other folders)
