[project]
name = "TUGProjectEpoch"
version = "0.1.0"
description = "TUGs port to Zygor 3.3.5 for Project Epoch"
authors = [{ name = "Simon Gaufreteau", email = "simon.gaufreteau@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"


dependencies = [
  "ruff==0.12.7",
  "mypy==1.17.1",
  "polars==1.32.0",
  "logging==0.4.9.6",
]


[tool.setuptools]
packages = ["epoch"]
package-dir = { "" = "src" }

[tool.ruff]
target-version = "py313"
line-length = 110
extend-exclude = [
  "*.[!p][!y]*",
  ".egg*",
  ".gitignore",
  ".gitattributes",
  ".python-version",
  ".venv",
  "build",
  "pyproject.toml",
]
unsafe-fixes = true

[tool.ruff.lint]
unfixable = []
extend-select = [
  "B",
  "C4",
  "D106",
  "D2",
  "D3",
  "D400",
  "D402",
  "D403",
  "D412",
  "D419",
  "I",
  "ICN",
  "PGH",
  "PIE",
  "PT",
  "PTH",
  "Q",
  "RUF100",
  "SIM",
  "TCH",
  "TID",
  "UP",
  "T201",
]
ignore = [
  "B019",
  "COM812",
  "COM819",
  "D203",
  "D205",
  "D206",
  "D212",
  "D213",
  "D214",
  "D215",
  "D300",
  "E111",
  "E114",
  "E117",
  "E731",
  "G010",
  "ISC001",
  "ISC002",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "TID252",
  "W191",
]


[tool.ruff.lint.isort]
known-first-party = ["epoch"]
combine-as-imports = true
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]
